# AgenticGames

./: README.md  app.py  environment.yml  main.py  pyproject.toml  requirements.txt
LLMs/: general_llm.py  openai_llm.py  system_prompts.json
agent_engine/: agent_player.py
agent_layer/: README.md  actor.py  agent_actor.py  agent_selector.py  human_actor.py
agent_layer/LLMs/: general_llm.py  llm_selector.py  openai_llm.py  x_llm.py
agent_layer/agents/: agent_player.py  agent_selector.py
agent_layer/llm_agents/: llm_agent.py
app_layer/: README.md  agent_evaluator.py  async_input_bridge.py  controlled_execution_manager.py  direct_execution_manager.py  game_execution_manager.py  game_runner.py  input_source.py  runner_types.py  session_builder.py  stats_runner.py
app_layer/building/: session_builder.py  session_config.py
app_layer/core/: game_runner.py
app_layer/execution/: agent_evaluator.py
app_layer/io/: async_input_bridge.py
app_layer/registries/: discovery.py  generic_registry.py  manager.py  specs.py
engine/: core_engine.py  level_based_engine.py
game_configs/: Mistery_Secuences_Game.json
game_engine/: core_engine.py  level_based_engine.py
game_layer/: README.md
game_layer/game_configs/: mistery_sequences.json
game_layer/game_engine/: core_engine.py  level_based_engine.py
game_layer/games/: game_selector.py
games/: game_selector.py
ui_layer/: README.md
ui_layer/cli/: README.md  cli_adapter.py  cli_session_configurator.py  main.py  run_agent_evaluation.py
ui_layer/common/: persistance.py
ui_layer/gradio/: README.md  app.py  (+5 more)
(+29 files in other folders)
